# Akamai-MISP

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  akamai_ioc.py  pyproject.toml  requirements-dev.txt  requirements.txt  validate_module.sh
.github/: PULL_REQUEST_TEMPLATE.md
tests/: README.md  __init__.py  test_akamai_ioc.py  test_validation.py
