[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akamai-misp"
version = "2.0.0"
description = "MISP expansion module for Akamai ETP threat intelligence enrichment"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shiran Guez"},
    {name = "Jordan Garzon"},
    {name = "Avishai Katz"},
    {name = "Asaf Nadler"},
]
maintainers = [
    {name = "Akamai Security Team", email = "security@akamai.com"}
]
requires-python = ">=3.6"
keywords = ["misp", "threat-intelligence", "akamai", "etp", "ioc", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.31.0,<3.0.0",
    "pymisp>=2.5.32,<3.0.0",
    "edgegrid-python>=1.3.1,<2.0.0",
    "urllib3>=1.26.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/akamai/Akamai-MISP"
Repository = "https://github.com/akamai/Akamai-MISP"
"Bug Tracker" = "https://github.com/akamai/Akamai-MISP/issues"
Documentation = "https://github.com/akamai/Akamai-MISP/blob/main/README.md"
Changelog = "https://github.com/akamai/Akamai-MISP/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = ["akamai_ioc"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # bandit
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert used (ok in tests)
    "S104",   # possible binding to all interfaces
    "S110",   # try-except-pass
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S105"]  # Allow asserts, hardcoded passwords in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -v
    --tb=short
    --strict-markers
    --disable-warnings
"""
markers = [
    "integration: integration tests requiring external services",
    "unit: unit tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
ignore_missing_imports = true
check_untyped_defs = false
warn_redundant_casts = false
warn_unused_ignores = false
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pymisp.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "akamai.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # assert_used

[tool.bandit.assert_used]
skips = ["**/test_*.py"]
